# ingeSTation

./: .gitignore  README.md  application.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: aspell.yml  pylint_stable.yml  pytest.yml  yamllint.yml
src/: final.json  global_vars.py  main.py
src/modules/: global_vars.py
src/modules/configs/: config.py  final.json  templates.py
src/modules/configs/schemas/: application.py  final.py  objects.json  operator.py  project.py  schemas.py
src/modules/configs/templates/: application.json  application.py  examples.py  final.py  operator.json  operator.py  project.json  project.py  templates.py
src/modules/global_vars/: __init__.py
src/modules/misc/: arguments.py  utils.py
src/modules/mounting/: mounting.py
src/modules/outputs/: blocks.py  loggers.py
src/modules/partitioning/: parts.py
src/modules/threading/: workers.py
src/modules/uploading/: chunks.py  upload.py
tests/configs/: aspell_exceptions  pylint_dev.toml  pylint_stable.toml
tests/configs/pytest/: application.json  operator.json  project.json
tests/data/: app.json  op.json  proj.json  proj2.json  test_data.py  test_results.py
tests/data/configs/: application.json  config_rule.py  err_msg.py  error_messages.py  merge_conf.py  validate_json_failed.py  validate_json_passed.py
tests/modules/configs/: test_config.py
tests/modules/misc/: test_arguments.py  test_notify.py
tests/utils/: __init__.py
tools/: prep_commit.sh  prep_test.sh
