[metadata]
name = ingeSTation
version = 0.0.1
description = Python application designed for data ingest(at)ion and controlling operations on ingest stations. ST stands for Speedy Transfer or Super Turbo.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/LegenJCdary/ingeSTation.git
author = Billy Zhou, Kuba Wierzbowski
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Archiving
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Archiving :: Mirroring
    Topic :: System :: Clustering
    Topic :: System :: Filesystems
    Topic :: System :: Systems Administration
project_urls =
    Source =  https://github.com/LegenJCdary/ingeSTation.git

[options]
package_dir =
    ingestation=src
packages =
    ingestation
    ingestation.modules
    ingestation.modules.configs
    ingestation.modules.misc
    ingestation.modules.outputs
install_requires =
python_requires = >=3.9
zip_safe = False
setup_requires =
    setuptools
include_package_data = True

[options.entry_points]
console_scripts =
    ingestation = ingestation.main:ingestation
